# stream

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
client/: CMakeLists.txt
client/include/: broadcaster.h  client.h  connectingwidget.h  connectionwidget.h  imguispinner.h  openh264_spdlog.h  sclbroadcaster.h  streamselectionwidget.h  streamwindow.h  widget.h  window.h
client/src/: CMakeLists.txt  broadcaster.cpp  client.cpp  connectingwidget.cpp  connectionwidget.cpp  imguispinner.cpp  main.cpp  sclbroadcaster.cpp  streamselectionwidget.cpp  streamwindow.cpp  widget.cpp  window.cpp
server/: CMakeLists.txt
server/include/: connection.h  server.h
server/src/: CMakeLists.txt  connection.cpp  main.cpp  server.cpp
src/: CMakeLists.txt  main.cpp
